Fix typo in header

--- a/snowman/templates/index.html
+++ b/snowman/templates/index.html
@@ -3,7 +3,7 @@
 {{ define "title" }}{{ end }}
 
 {{ define "content" }}
-<h1>Fall of</h1>
+<h1>Fall of Rome</h1>
 <div class="mb">
 {{ range . }}
 <a href="{{ .site }}.html">{{ .site_name }}</a><br>
