Use relative paths

--- a/snowman/templates/index.html
+++ b/snowman/templates/index.html
@@ -6,7 +6,7 @@
 <h1>Fall of Rome</h1>
 <div class="mb">
 {{ range . }}
-<a href="{{ .uri }}.html">{{ .site_type }}</a><br>
+<a href="site-type/{{ .id }}.html">{{ .site_type }}</a><br>
 {{ end }}
 </div>
 {{ end }}
