--- a/snowman/templates/site-type.html
+++ b/snowman/templates/site-type.html
@@ -5,6 +5,6 @@
 {{ define "content" }}
 <h1>Fall of Rome</h1>
 <div class="mb">
-<a href="{{ .uri }}.html">{{ .site_type }}</a><br>
+<a href="site-type/{{ .id }}.html">{{ .site_type }}</a><br>
 </div>
 {{ end }}
