set up basic site structure

--- a/snowman/static/index.css
+++ b/snowman/static/index.css
@@ -1,11 +1,52 @@
 html,
+*,
+::before,
+::after {
+    box-sizing: border-box;
+}
+
 body {
     height: 100%;
-    margin: 0 0.5rem;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
+        sans-serif;
 }
 
 header {
     height: 3.6rem;
+}
+
+nav {
+    background-color: #333;
+}
+
+nav ol {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-around;
+}
+
+nav ol li {
+    display: inline;
+}
+
+nav ol li a {
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    display: block;
+}
+
+nav ol li a:hover {
+    background-color: #575757;
+}
+
+main {
+    margin: 0 1rem 1rem;
 }
 
 .list {
