--- a/snowman/templates/municipality.html
+++ b/snowman/templates/municipality.html
@@ -1,10 +1,10 @@
 {{ template "base" . }}
 
-{{ define "title" }}{{ .site_type }}{{ end }}
+{{ define "title" }}{{ .municipality }}{{ end }}
 
 {{ define "content" -}}
 <header>
-  <h1>{{ .site_type }}</h1>
+  <h1>{{ .municipality }}</h1>
 </header>
 <div>
 </div>
