add skeleton for analytic sites to html site

--- a/snowman/templates/layouts/base.html
+++ b/snowman/templates/layouts/base.html
@@ -13,6 +13,7 @@
         <li><a href="/ceramic-types/">Ceramic types</a></li>
         <li><a href="/roman-provinces/">Roman provinces</a></li>
         <li><a href="/municipalities/">Municipalities</a></li>
+        <li><a href="/analytic-regions/">Analytic regions</a></li>
       </ol>
     </nav>
     <main>
