updating queries and html for existing info + need to add additional definitions

--- a/snowman/templates/site-type.html
+++ b/snowman/templates/site-type.html
@@ -7,5 +7,17 @@
   <h1>{{ .site_type }}</h1>
 </header>
 <div>
+    <p><strong>DKG Lab ID:</strong> {{ .id }}</p>
+    <p><strong>DKG Lab Definition:</strong> {{ .siteTypeDefinition }}</p>
+    <p><strong>Wikidata ID:</strong> {{ .?wikiEntity }}</p>
+    <p><strong>Pleiades Place Type:</strong> {{ .pleiadesPlaceType}}</p>
+    <p><strong>Pleiades Place Type:</strong> {{ .pleiadesPlaceType}}</p>
+    <p><strong>Additional Definitions:</strong><ul>
+      <li>Wikidata: {{ #newvariable }}</li>
+      <li>Pleiades: {{ #newvariable }}</li>
+    </ul></p>
+    <p><strong>Broader Concept:</strong> {{ .concept}}</p>
 </div>
 {{- end }}
+
+#adding pleiades and wiki close match definitions to csv + updating queries 
