update ceramic-type snowman query and html template

--- a/snowman/templates/ceramic-type.html
+++ b/snowman/templates/ceramic-type.html
@@ -8,7 +8,7 @@
 </header>
 <div>
   <p><strong>Form type:</strong> {{ .form_type }}</p>
-  <p><strong>Wikidata:</strong> {{ .wiki_entity }}</p>
+  <p><strong>Wikidata:</strong> <a href="{{ .wiki_entity }}">{{ .wiki_entity }}</a></p>
   <p><strong>Start date:</strong> {{ .start_date}}</p>
   <p><strong>End date:</strong> {{ .end_date }}</p>
   <p><strong>Suggested dating:</strong> {{ .suggested_dating }}</p>
