--- a/snowman/templates/site-type.html
+++ b/snowman/templates/site-type.html
@@ -9,14 +9,16 @@
 <div>
     <p><strong>DKG Lab ID:</strong> {{ .id }}</p>
     <p><strong>DKG Lab Definition:</strong> {{ .siteTypeDefinition }}</p>
-    <p><strong>Wikidata ID:</strong> {{ .?wikiEntity }}</p>
+    <p><strong>Wikidata:</strong> {{ .wikiEntity }}</p>
     <p><strong>Pleiades Place Type:</strong> {{ .pleiadesPlaceType}}</p>
     <p><strong>Additional Definitions:</strong><ul>
-      <li>Wikidata: {{ #newvariable }}</li>
-      <li>Pleiades: {{ #newvariable }}</li>
+      <li>Wikidata: </li>
+      <li>Pleiades: </li>
     </ul></p>
-    <p><strong>Broader Concept:</strong> {{ .concept}}</p>
+    <p><strong>Broader Concept:</strong> {{ .broaderSiteType}}</p>
+<!--<p><strong>Narrower Concept:</strong> {{ .narrowerSiteType}}</p>-->
 </div>
+
 {{- end }}
 
-#adding pleiades and wiki close match definitions to csv + updating queries 
+<!--adding pleiades and wiki close match definitions to csv + updating queries -->
