--- a/snowman/static/index.css
+++ b/snowman/static/index.css
@@ -1,3 +1,7 @@
+:root {
+    --nav-height: 2.2rem;
+}
+
 html,
 *,
 ::before,
@@ -8,16 +12,12 @@ html,
 body {
     height: 100%;
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-        Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
-        sans-serif;
-}
-
-header {
-    height: 3.6rem;
+    font-family: system-ui;
+    font-size: 14px;
 }
 
 nav {
+    height: var(--nav-height);
     background-color: #333;
 }
 
@@ -46,10 +46,18 @@ nav ol li a:hover {
 }
 
 main {
-    margin: 0 1rem 1rem;
+    display: flex;
+    flex-direction: column;
+    height: calc(100vh - var(--nav-height));
+    width: 100%;
+    margin: 0 1rem;
+    line-height: 180%;
 }
 
-.list {
-    height: calc(100vh - 3.6rem);
-    font-size: 14px;
+header {
+    height: 3.6rem;
+}
+
+.grow {
+    flex-grow: 1; /* Take remaining space */
 }
