integrate oxigraph and load sites list from sparql query

--- a/snowman/templates/index.html
+++ b/snowman/templates/index.html
@@ -6,6 +6,6 @@
   <header>
     <h1>All located archaeological sites</h1>
   </header>
-  <long-list items="sites.json" class="grow"></long-list>
-  <script src="/long-list.js"></script>
+  <long-list id="sites-list" class="grow"></long-list>
+  <script src="/list-view.js"></script>
 {{- end }}
