update ceramic template and query; fix typo in csv

--- a/snowman/templates/ceramic-type.html
+++ b/snowman/templates/ceramic-type.html
@@ -13,10 +13,10 @@
   <p><strong>End date:</strong> {{ .end_date }}</p>
   <p><strong>Suggested dating:</strong> {{ .suggested_dating }}</p>
   <p><strong>Part of:</strong><ul>
-    <li>{{ .group1 }}</li>
-    <li>{{ .group2 }}</li>
-    <li>{{ .group3 }}</li>
-    <li>{{ .group4 }}</li>
+    <li>{{ .ARSGroup }}</li>
+    <li>{{ .ARSGroup2 }}</li>
+    <li>{{ .ARSImportHorizon }}</li>
+    <li>{{ .ARSImportHorizon2 }}</li>
   </ul></p>
 </div>
 {{- end }}
