Add initial snowman template for municipalities

--- a/snowman/templates/municipalities.html
+++ b/snowman/templates/municipalities.html
@@ -8,7 +8,7 @@
 </header>
 <div class="list">
   {{ range . }}
-  <div><a href="{{ .id }}.html">{{ .municipality }}</a></div>
+  <div><a href="{{ .id }}.html">{{ .id }}</a></div>
   {{ end }}
 </div>
 {{- end }}
