--- a/snowman/templates/municipality.html
+++ b/snowman/templates/municipality.html
@@ -4,7 +4,8 @@
 
 {{ define "content" -}}
 <header>
-  <h1>{{ .municipality }}</h1>
+  <h1>{{ .uri }}</h1>
+  <div><a href="{{ .place_name }}">{{ .place_name }}</a></div>
 </header>
 <div>
 </div>
