--- a/snowman/templates/site-type.html
+++ b/snowman/templates/site-type.html
@@ -9,8 +9,16 @@
 <div>
     <p><strong>DKG Lab ID:</strong> {{ .id }}</p>
     <p><strong>DKG Lab Definition:</strong> {{ .siteTypeDefinition }}</p>
-    <p><strong>Wikidata:</strong> {{ .wikiEntity }}</p>
-    <p><strong>Pleiades Place Type:</strong> {{ .pleiadesPlaceType}}</p>
+    <p><strong>Close matches:</strong></p>
+    <ul>
+      {{ range $index, $uri := split .matchingURIs "," }}
+      <li>
+        <a href="{{ trim $uri }}">
+          {{ if contains (trim $uri) "www.wikidata.org" }}Wikidata{{ else if contains (trim $uri) "pleiades.stoa.org" }}Pleiades{{ else }}{{ trim $uri }}{{ end }}
+        </a>
+      </li></a>
+      {{ end }}
+    </ul>
     <p><strong>Additional Definitions:</strong><ul>
       <li>Wikidata: </li>
       <li>Pleiades: </li>
