Updated templates for municipalities and Roman provinces

--- a/snowman/templates/municipalities.html
+++ b/snowman/templates/municipalities.html
@@ -10,8 +10,7 @@
 <div class="list">
   {{ range . }}
   <div class="municipality">
-    <a href="{{ .id }}.html">{{ .name }}</a>
-    <p>{{ .description }}</p>
+      <a href="{{ .id }}.html">{{ .Municipality_label }}</a>
   </div>
   {{ end }}
 </div>
