--- a/snowman/templates/roman-province.html
+++ b/snowman/templates/roman-province.html
@@ -7,12 +7,12 @@
   <h1>{{ .province_name }}</h1>
 </header>
 <div>
-  <p><strong>DKG Province ID:</strong> {{ .id }}</p>
-  <p><strong>Place Name:</strong> <a href="{{ .place_name_uri }}">{{ .province_name }}</a></p>
+  <p><strong>DKG Province ID:</strong> {{ .provincia_for_uri }}</p>
+  <p><strong>Place Name:</strong> {{ .provincia_place_name_for_label }}</p>
   <p><strong>Identifiers:</strong></p>
   <ul>
-    <li>Wikidata: <a href="{{ .wikidata_iri }}">{{ .wikidata_iri }}</a></li>
-    <li>Pleiades: <a href="{{ .pleiades_iri }}">{{ .pleiades_iri }}</a></li>
+    <li>Wikidata: <a href="{{ .provincia_wiki_uri }}">{{ .provincia_wiki_uri }}</a></li>
+    <li>Pleiades: <a href="{{ .provincia_pleiades_uri }}">{{ .provincia_pleiades_uri }}</a></li>
   </ul>
   <p><strong>Geometry (WKT):</strong> {{ .geometry }}</p>
 </div>
