Fix references to missing id variable

--- a/snowman/templates/municipality.html
+++ b/snowman/templates/municipality.html
@@ -9,7 +9,7 @@
 </header>
 <div>
   <p><strong>Municipality Name:</strong> {{ .municipality_label }}</p>
-  <p><strong>DKG Gazetteer ID:</strong> {{ .id }}</p>
+  <p><strong>DKG Gazetteer ID:</strong> {{ .municipality }}</p>
   <p><strong>Description:</strong> {{ .description }}</p>
   <p><strong>Identifiers:</strong></p>
   <ul>
