--- a/snowman/templates/municipalities.html
+++ b/snowman/templates/municipalities.html
@@ -10,7 +10,7 @@
 <div class="list">
   {{ range . }}
   <div class="municipality">
-      <a href="{{ .id }}.html">{{ .Municipality_label }}</a>
+      <a href="{{ .municipality }}.html">{{ .municipality_label }}</a>
   </div>
   {{ end }}
 </div>
