--- a/snowman/templates/ceramic-type.html
+++ b/snowman/templates/ceramic-type.html
@@ -7,6 +7,9 @@
   <h1>{{ .ceramic_type }}</h1>
 </header>
 <div>
+  {{ if .broader_id }}
+    <p><strong>Subform of:</strong> <a href="./{{.broader_id}}.html">{{ .broader_id }}</a></p>
+  {{ end }}
   <p><strong>Form type:</strong> {{ if .form_type }}{{ .form_type }}{{ else }}Undefined{{ end }}</p>
   <p><strong>Wikidata:</strong> {{ if .wiki_entity }}<a href="{{ .wiki_entity }}">{{ .wiki_entity }}</a>{{ else }}Undefined{{ end }}</p>
   <p><strong>Start date:</strong> {{ if .start_date }}{{ .start_date }}{{ else }}Undefined{{ end }}</p>
