Add link to view sites of a particular type on the map

--- a/snowman/templates/site-type.html
+++ b/snowman/templates/site-type.html
@@ -33,6 +33,7 @@
       <li>{{ trim $narrower }}</li>
       {{ end }}
     </ul>
+    <p><a href="/map?site-type={{ .id }}">See all {{ .id }}s on the map</a></p>
 </div>
 
 {{- end }}
