--- a/snowman/templates/site-type.html
+++ b/snowman/templates/site-type.html
@@ -21,8 +21,16 @@
     </ul>
     <p><strong>Additional Definitions:</strong><ul>
       <ul>
-        {{ range $index, $def := split .additionalDef "," }}
-        <li>{{ trim $def }}</li>
+        {{ range $index, $def := split .additionalDefs "," }}
+        <li>
+          {{ if contains (trim $def) "Wikidata:" }}
+            <strong>Wikidata:</strong> {{ trim (replace $def "Wikidata: " "") }}
+          {{ else if contains (trim $def) "Pleiades:" }}
+            <strong>Pleiades:</strong> {{ trim (replace $def "Pleiades: " "") }}
+          {{ else }}
+            {{ trim $def }}
+          {{ end }}
+        </li>
         {{ end }}
       </ul>
     </ul></p>
