--- a/snowman/templates/index.html
+++ b/snowman/templates/index.html
@@ -6,6 +6,7 @@
   <header>
     <h1>All located archaeological sites</h1>
   </header>
+  <input id="search" type="text" placeholder="Filter the list of sites..." />
   <long-list id="sites-list" class="grow"></long-list>
   <script src="/list-view.js"></script>
 {{- end }}
