Create drawer for queries

--- a/snowman/templates/map.html
+++ b/snowman/templates/map.html
@@ -3,11 +3,23 @@
 {{ define "title" }}Map{{ end }}
 
 {{ define "css" -}}
+    <link rel="stylesheet" href="/drawer.css" />
     <link rel="stylesheet" href="/map.css" />
 {{- end }}
 
 
 {{ define "content" -}}
-      <tile-map id="map" class="grow"></tile-map>
-      <script src="/map-view.js"></script>
+    <script src="/drawer.js"></script>
+    <div class="drawer-container">
+        <div class="content-container">
+            <tile-map id="map" class="grow"></tile-map>
+            <button drawer="sidebar" onclick="toggleDrawer(event)" class="drawer-toggle">
+                Open Queries
+            </button>
+        </div>
+        <script src="/map-view.js"></script>
+        <div class="drawer drawer-inactive" id="sidebar">
+            <h1>Test</h1>
+        </div>
+    </div>
 {{- end }}
