--- a/snowman/static/drawer.css
+++ b/snowman/static/drawer.css
@@ -5,19 +5,21 @@
 }
 
 .content-container {
+    position: relative;
+    top: 0;
+    left: 0;
     display: flex;
     height: 100%;
     width: 100%;
 }
 
 .drawer-toggle {
-    position: fixed;
+    position: absolute;
     right: 0;
     padding: 10px;
 }
 
 .drawer {
-    transform: translateX(100%);
     overflow: hidden;
     transition: width 0.2s ease-out;
 }
