--- a/snowman/templates/site.html
+++ b/snowman/templates/site.html
@@ -8,6 +8,9 @@
 </header>
 <div>
   <p><strong>Site Name:</strong> {{ .site_name }}</p>
-  <p><strong>Alternative label:</strong>{{ .processed }}</p>
-  <p><strong>In town:</strong>{{ .towns }}</p>
+  <p><strong>Alternative label: </strong>{{ .processed }}</p>
+  <p><strong>Found artifact type(s): </strong>{{ if .artifactTypes }}{{ .artifactTypes }}{{ else }}Undefined{{ end }}</p>
+  <p><strong>Site type(s): </strong>{{ if .siteTypes }}{{ .siteTypes }}{{ else }}Undefined{{ end }}</p>
+  <p><strong>In administrative region(s): </strong>{{ if .actualMunicipalities }}{{ .actualMunicipalities }}{{ else }}Undefined{{ end }}</p>
+  <p><strong>In town(s): </strong>{{ if .towns }}{{ .towns }}{{ else }}Undefined{{ end }}</p>
 {{- end }}
