--- a/snowman/templates/ceramic-type.html
+++ b/snowman/templates/ceramic-type.html
@@ -7,8 +7,24 @@
   <h1>{{ .ceramic_type }}</h1>
 </header>
 <div>
-  {{ if .broader_id }}
-    <p><strong>Subform of:</strong> <a href="./{{.broader_id}}.html">{{ .broader_id }}</a></p>
+  {{ if .broader_ids }}
+    <p><strong>Subform of:</strong>
+    <ul>
+      {{ range $index, $broader := split .broader_ids "," }}
+        <li><a href="./{{ trim $broader }}.html">{{ trim $broader }}</a></li>
+      {{ end }}
+    </ul>
+    </p>
+  {{ end }}
+
+  {{ if .narrower_ids }}
+    <p><strong>Subforms:</strong>
+      <ul>
+        {{ range $index, $narrower := split .narrower_ids "," }}
+          <li><a href="./{{ trim $narrower }}.html">{{ trim $narrower }}</a></li>
+        {{ end }}
+      </ul>
+    </p>
   {{ end }}
   <p><strong>Form type:</strong> {{ if .form_type }}{{ .form_type }}{{ else }}Undefined{{ end }}</p>
   <p><strong>Wikidata:</strong> {{ if .wiki_entity }}<a href="{{ .wiki_entity }}">{{ .wiki_entity }}</a>{{ else }}Undefined{{ end }}</p>
@@ -18,8 +34,6 @@
   {{ if or .ARSGroup .ARSGroup2 .ARSImportHorizon .ARSImportHorizon2 }}
     <p><strong>Part of:</strong>
       <ul>
-        {{ if .ARSGroup }}<li>{{ .ARSGroup }}</li>{{ end }}
-        {{ if .ARSGroup2 }}<li>{{ .ARSGroup2 }}</li>{{ end }}
         {{ if .ARSImportHorizon }}<li>{{ .ARSImportHorizon }}</li>{{ end }}
         {{ if .ARSImportHorizon2 }}<li>{{ .ARSImportHorizon2 }}</li>{{ end }}
       </ul>
