--- a/snowman/templates/site-type.html
+++ b/snowman/templates/site-type.html
@@ -12,7 +12,7 @@
   
     <p><strong>Close matches:</strong></p>
     <ul>
-      {{ range $index, $uri := split .matchingURIs "," }}
+      {{ range $index, $uri := split .matchingURIs ", " }}
       <li>
       <a href="{{ trim $uri }}">
         {{ if contains (trim $uri) "www.wikidata.org" }}Wikidata{{ else if contains (trim $uri) "pleiades.stoa.org" }}Pleiades{{ else }}{{ trim $uri }}{{ end }}
@@ -22,15 +22,13 @@
     </ul>
     <p><strong>Additional Definitions:</strong></p>
     <ul>
-      {{ range $index, $def := split .additionalDefs "," }}
+      {{ range $index, $def := split .additionalDefs "|" }}
       <li>
-        {{ if contains (trim $def) "Wikidata:" }}
-          <strong>Wikidata:</strong> {{ trim (replace $def "Wikidata: " "" -1) }}
-        {{ else if contains (trim $def) "Pleiades:" }}
-          <strong>Pleiades:</strong> {{ trim (replace $def "Pleiades: " "" -1) }}
-        {{ else }}
-          {{ trim $def }}
-        {{ end }}
+      {{ if or (contains $def "Wikidata:") (contains $def "Pleiades:") }}
+      {{ trim $def }}
+      {{ else }}
+      {{ trim $def }}
+      {{ end }}
       </li>
       {{ end }}
     </ul>
