--- a/snowman/static/drawer.css
+++ b/snowman/static/drawer.css
@@ -21,14 +21,14 @@
 
 .drawer {
     overflow: hidden;
-    transition: width 0.2s ease-out;
+    transition: max-width 0.5s ease-out;
 }
 
 .drawer-inactive {
-    width: 0%;
+    max-width: 0%;
 }
 
 .drawer-active {
     flex-shrink: 0;
-    width: auto;
+    max-width: none;
 }
