Add basic query UI

--- a/snowman/templates/map.html
+++ b/snowman/templates/map.html
@@ -10,6 +10,7 @@
 
 {{ define "content" -}}
     <script src="/drawer.js"></script>
+    <script src="/create-query.js"></script>
     <div class="drawer-container">
         <div class="content-container">
             <tile-map id="map" class="grow"></tile-map>
@@ -18,8 +19,19 @@
             </button>
         </div>
         <script src="/map-view.js"></script>
-        <div class="drawer drawer-inactive" id="sidebar">
-            <h1>Test</h1>
+        <div class="drawer drawer-active" id="sidebar">
+            <h1>Queries</h1>
+            <p>
+                Provides prefixes for the following
+            </p>
+            <prefix-list></prefix-list>
+            <div id="query-container">
+                <query-holder></query-holder>
+            </div>
+            <button onclick="createQuery()">
+                Create Query
+            </button>
         </div>
     </div>
+    <script src="/query.js"></script>
 {{- end }}
