Emit query updated event
This allows us to "escape" the shadow dom and be handled by a single event listener rather than a bunch of individual ones.

--- a/snowman/templates/map.html
+++ b/snowman/templates/map.html
@@ -10,7 +10,7 @@
 
 {{ define "content" -}}
     <script src="/drawer.js"></script>
-    <script src="/create-query.js"></script>
+    <script src="/query/create-query.js"></script>
     <div class="drawer-container">
         <div class="content-container">
             <tile-map id="map" class="grow"></tile-map>
@@ -33,5 +33,6 @@
             </button>
         </div>
     </div>
-    <script src="/query.js"></script>
+    <script src="/query/handle-query.js"></script>
+    <script src="/query/query.js"></script>
 {{- end }}
