Implement showing geometries

--- a/snowman/templates/map.html
+++ b/snowman/templates/map.html
@@ -25,6 +25,9 @@
                 Provides prefixes for the following
             </p>
             <prefix-list></prefix-list>
+            <p>
+                Geometries must be bound to "?wkt"
+            </p>
             <div id="query-container">
                 <query-holder></query-holder>
             </div>
