fix build for ceramic explorer

--- a/snowman/templates/layouts/base.html
+++ b/snowman/templates/layouts/base.html
@@ -16,6 +16,7 @@
         <li><a href="/municipalities/">Municipalities</a></li>
         <li><a href="/analytic-regions/">Analytic regions</a></li>
         <li><a href="/map/">Map</a></li>
+        <li><a href="/ceramic-explorer/">Ceramic explorer</a></li>
       </ol>
     </nav>
     <main>
