add import horizons to snowman views and base page

--- a/snowman/templates/layouts/base.html
+++ b/snowman/templates/layouts/base.html
@@ -12,6 +12,7 @@
         <li><a href="/">Sites</a></li>
         <li><a href="/site-types/">Site types</a></li>
         <li><a href="/ceramic-types/">Ceramic types</a></li>
+        <li><a href="/import-horizons/">Import horizons</a></li>
         <li><a href="/roman-provinces/">Roman provinces</a></li>
         <li><a href="/municipalities/">Municipalities</a></li>
         <li><a href="/analytic-regions/">Analytic regions</a></li>
