Change drawer to default to being hidden

--- a/snowman/templates/map.html
+++ b/snowman/templates/map.html
@@ -19,7 +19,7 @@
             </button>
         </div>
         <script src="/map-view.js"></script>
-        <div class="drawer drawer-active" id="sidebar">
+        <div class="drawer drawer-inactive" id="sidebar">
             <h1>Queries</h1>
             <p>
                 Provides prefixes for the following
