Refactor prefix list to be outside of prefixes file
This fixes issues where it would load multiple times and clutter the console

--- a/snowman/templates/map.html
+++ b/snowman/templates/map.html
@@ -11,6 +11,7 @@
 {{ define "content" -}}
     <script src="/drawer.js"></script>
     <script src="/query/create-query.js"></script>
+    <script src="/prefix/prefix-list.js"></script>
     <div class="drawer-container">
         <div class="content-container">
             <tile-map id="map" class="grow"></tile-map>
