Add map view for roman provinces

--- a/snowman/templates/roman-province.html
+++ b/snowman/templates/roman-province.html
@@ -12,6 +12,7 @@
   <p><strong>Identifiers:</strong>{{ .provincia_other_uris}}</p>
   <p><strong>Geometry:</strong></p>
   <div class="geometry">{{ .geometry }}</div> 
+  <p><a href="/map?roman-province={{ .id }}">See {{ .provincia_label }} on the map</a></p>
 </div>
 {{- end }}
 
