Implement linking to municipality on map

--- a/snowman/templates/municipality.html
+++ b/snowman/templates/municipality.html
@@ -14,6 +14,7 @@
   <p><strong>Identifiers:</strong>{{.municipality_other_uris}}</p>
   <p><strong>Geometry:</strong></p>
   <div class="geometry">{{ .geometry }}</div>
+  <p><a href="/map?municipality={{ .municipality_label }}">See {{ .municipality_label }} on the map</a></p>
 </div>
 
 <style>
